updated tests for @media + whitespace fix

--- a/tests/inputs/media.less
+++ b/tests/inputs/media.less
@@ -10,3 +10,12 @@
 @media screen, print {
 	body { line-height: 1.2 }
 }
+
+@media all and (min-width: 0px) {
+	body { line-height: 1.2 }
+}
+
+@media all and (min-width: 0) {
+	body { line-height: 1.2 }
+}
+
